<resources>
    <string name="app_name">路港网 </string>
    <string name="action_settings">Settings</string>
    <string name="username">输入用户名</string>
    <string name="password">输入密码</string>
    <string name="login">登录</string>
    <string name="tab1">首页</string>
    <string name="tab2">工单</string>
    <string name="tab3">入库</string>
    <string name="tab4">出库</string>
    <string name="setting">设置</string>
    <string name="qrsearch">二维码查询运单</string>
    <string name="express">城际快线</string>
    <string name="between">==</string>
    <string name="company">物流企业</string>
    <string name="carinfo">车源信息</string>
    <string name="lastet">配货信息</string>
    <string name="billsearch">运单查询</string>
    <string name="notice">新闻公告</string>
    <string name="singlein">入库记录</string>
    <string name="multin">货物入库</string>
    <string name="blank">空白托运单入库</string>
    <string name="singleout">出库记录</string>
    <string name="multiout">货物出库</string>
    <string name="feedback">反馈客服</string>
    <string name="about">关于软件</string>
    <string name="version">版本更新</string>
    <string name="logout">注销登录</string>
    <string name="number">序号</string>
    <string name="handling">待处理事项</string>
    <string name="done">已完成事项</string>
    <string name="arrivetime">到达时间</string>
    <string name="loginname">登录名:</string>
    <string name="userinfo">用户信息</string>
    <string name="group">用户组:</string>
    <string name="record">货物流转记录</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="about_content">路港网安卓版1.0版本\n\n本软件由广西路港科技有限公司开发，版权所有 </string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描\n音量+开启闪光灯,音量-关闭</string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">待用</string>
    <string name="preferences_front_light_on">活跃</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_invert_scan_summary">黑色背景上的白色条形码扫描。在某些设备上。</string>
    <string name="preferences_invert_scan_title">反向扫描</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string-array name="province_item">
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>上海</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>重庆</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>西藏</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>北京</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>天津</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>石家庄</item>
        <item>唐山</item>
        <item>秦皇岛</item>
        <item>邯郸</item>
        <item>邢台</item>
        <item>保定</item>
        <item>张家口</item>
        <item>承德</item>
        <item>沧州</item>
        <item>廊坊</item>
        <item>衡水</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>太原</item>
        <item>大同</item>
        <item>阳泉</item>
        <item>长治</item>
        <item>晋城</item>
        <item>朔州</item>
        <item>晋中</item>
        <item>运城</item>
        <item>忻州</item>
        <item>临汾</item>
        <item>吕梁</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>呼和浩特</item>
        <item>包头</item>
        <item>乌海</item>
        <item>赤峰</item>
        <item>通辽</item>
        <item>鄂尔多斯</item>
        <item>呼伦贝尔</item>
        <item>巴彦淖尔</item>
        <item>乌兰察布</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善盟</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>沈阳</item>
        <item>大连</item>
        <item>鞍山</item>
        <item>抚顺</item>
        <item>本溪</item>
        <item>丹东</item>
        <item>锦州</item>
        <item>营口</item>
        <item>阜新</item>
        <item>辽阳</item>
        <item>盘锦</item>
        <item>铁岭</item>
        <item>朝阳</item>
        <item>葫芦岛</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>长春</item>
        <item>吉林</item>
        <item>四平</item>
        <item>辽源</item>
        <item>通化</item>
        <item>白山</item>
        <item>松原</item>
        <item>白城</item>
        <item>延边</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>哈尔滨</item>
        <item>齐齐哈尔</item>
        <item>鸡西</item>
        <item>鹤岗</item>
        <item>双鸭山</item>
        <item>大庆</item>
        <item>伊春</item>
        <item>佳木斯</item>
        <item>七台河</item>
        <item>牡丹江</item>
        <item>黑河</item>
        <item>绥化</item>
        <item>大兴安岭</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>上海</item>
    </string-array>
</resources>