<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/number"/>
    
    <View android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>
    
    <TextView android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/handling"/>
    
    <View android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>
    
    <TextView android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/arrivetime"/>
    

</LinearLayout>
