<?xml version="1.0" encoding="utf-8"?> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash" >

    <RelativeLayout 
        android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    
    
    
    <com.honglang.lugang.ui.ClearEditText 
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:singleLine="true"
        android:drawableLeft="@drawable/icon_user"
        android:drawableRight="@drawable/delete_selector"
        android:background="@drawable/login_edittext_bg"
        android:hint="@string/username">
    <requestFocus />
    </com.honglang.lugang.ui.ClearEditText>
    
    <com.honglang.lugang.ui.ClearEditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:singleLine="true"
        android:drawableLeft="@drawable/account_icon"
        android:drawableRight="@drawable/delete_selector"
        android:background="@drawable/login_edittext_bg"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    
    <Button
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="1dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="@drawable/login_button_bg"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:onClick="onLogin"
        android:text="@string/login" />
    </LinearLayout>
    </ScrollView>
    
    
</RelativeLayout>
</LinearLayout>
